# vyatta-upnp

./: .gitignore  Makefile.am  README  configure.ac
debian/: README  changelog  control  lintian  rules
lib/Vyatta/: Upnp.pm
scripts/system/: upnp-interface-config.pl
templates/service/upnp/: node.def
templates/service/upnp/disabled/: node.def
templates/service/upnp/listen-on/: node.def
templates/service/upnp/listen-on/node.tag/disabled/: node.def
templates/service/upnp/listen-on/node.tag/outbound-interface/: node.def
